--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         fill(255);
         textAlign(RIGHT, CENTER);
         textSize(labelSize);
-        text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width) - 10, lineY);
+        text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width * 0.55) - 10, lineY);
     }
 
     // Draw vertical labels on the right side
