--- a/index.html
+++ b/index.html
@@ -90,42 +90,39 @@
         }
 
         function draw() {
-    background(255);
+            background(255);
 
-    let lineHeight = height / numPotentiometers;
-    let labelSize = min(width, height) * 0.03; // Responsive font size for labels
+            let lineHeight = height / numPotentiometers;
+            let labelFontSize = min(width, height) * 0.03; // Responsive font size for labels
 
-    for (let i = 0; i < numPotentiometers; i++) {
-        let lineY = i * lineHeight + lineHeight / 2;
+            // Draw vertical labels on the right side
+            textAlign(RIGHT, CENTER);
+            textSize(labelFontSize);
+            fill(255); // Set text color to white
+            for (let i = 0; i < numPotentiometers; i++) {
+                text(labels[i], width * 0.9, i * lineHeight + lineHeight / 2);
+            }
 
-        // Draw the background rectangle
-        noStroke();
-        fill(backgroundColors[i]);
-        rect(0, i * lineHeight, width, lineHeight);
+            for (let i = 0; i < numPotentiometers; i++) {
+                let lineY = i * lineHeight + lineHeight / 2;
 
-        // Draw the line with different color for each
-        strokeWeight(50);
-        stroke(lineColors[i]);
-        line(0, lineY, map(potValues[i], 0, 4095, 0, width * 0.55), lineY);
-        // Display the corresponding value to the left of the line
-        fill(255);
-        textAlign(RIGHT, CENTER);
-        textSize(labelSize);
-        text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width * 0.55) - 10, lineY);
-    }
+                // Draw the background rectangle
+                noStroke();
+                fill(backgroundColors[i]);
+                rect(0, i * lineHeight, width, lineHeight);
 
-    // Draw vertical labels on the right side
-    textAlign(LEFT, CENTER);
-    let labelFontSize = min(width, height) * 0.03; // Responsive font size for labels
-    textSize(labelFontSize);
-    fill(255); // Set text color to white
-    for (let i = 0; i < numPotentiometers; i++) {
-        text(labels[i], width * 0.9, i * lineHeight + lineHeight / 2);
-    }
+                // Draw the line with different color for each
+                strokeWeight(width * 0.55 / 100); // Line width as 55% of canvas width
+                stroke(lineColors[i]);
+                line(0, lineY, map(potValues[i], 0, 4095, 0, width), lineY);
 
-    // Detect movement and display corresponding text
-    // checkMovement();
-}
+                // Display the corresponding value to the left of the line
+                fill(255);
+                textAlign(RIGHT, CENTER);
+                text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width) - 10, lineY);
+            }
+        }
+
         // Function to receive data from JavaScript
         function receiveData(data) {
             let values = data.split(',');
@@ -134,48 +131,6 @@
                     potValues[i] = parseFloat(values[i]);
                 }
             }
-        }
-
-        function checkMovement() {
-            let sensitivity = 0.10; // 10%
-
-            // Check for significant increase in left arm (potentiometer 1 increases and potentiometer 2 decreases)
-            if (potValues[0] > potValues[1] && (potValues[0] - potValues[1]) / potValues[0] > sensitivity) {
-                isMovingUp = true;
-                isMovingDown = false;
-                displayMovementText("UP", 0);
-            }
-            // Check for significant decrease in left arm (potentiometer 1 decreases and potentiometer 2 increases)
-            else if (potValues[0] < potValues[1] && (potValues[1] - potValues[0]) / potValues[1] > sensitivity) {
-                isMovingUp = false;
-                isMovingDown = true;
-                displayMovementText("DOWN", 0);
-            }
-            // Check for significant increase in right arm (potentiometer 4 increases and potentiometer 5 decreases)
-            else if (potValues[3] > potValues[4] && (potValues[3] - potValues[4]) / potValues[3] > sensitivity) {
-                isMovingUp = true;
-                isMovingDown = false;
-                displayMovementText("UP", 3);
-            }
-            // Check for significant decrease in right arm (potentiometer 4 decreases and potentiometer 5 increases)
-            else if (potValues[3] < potValues[4] && (potValues[4] - potValues[3]) / potValues[4] > sensitivity) {
-                isMovingUp = false;
-                isMovingDown = true;
-                displayMovementText("DOWN", 3);
-            } else {
-                // No significant movement
-                isMovingUp = false;
-                isMovingDown = false;
-                background(255); // Clear previous movement text
-            }
-        }
-
-        function displayMovementText(textToShow, potentiometerNumber) {
-            fill(0); // Black text
-            textAlign(CENTER, CENTER);
-            let textSize = min(width, height) * 0.05; // Responsive text size
-            textSize(textSize);
-            text("Pot " + (potentiometerNumber + 1) + ": " + textToShow, width / 2, height / 2);
         }
 
         function setupColors() {
