--- a/index.html
+++ b/index.html
@@ -13,35 +13,48 @@
     </style>
 </head>
 <body>
-    <h1>Avatar BT Debug</h1>
+    <h1>Avatar Debug</h1>
     <button id="connectButton">Connect to Avatar</button>
 
     <script>
         let characteristic;
+        let isConnected = false; // Track connection state
 
         async function connectToDevice() {
             try {
-                // Request Bluetooth device
-                const device = await navigator.bluetooth.requestDevice({
-                    filters: [{ services: ['6e400001-b5a3-f393-e0a9-e50e24dcca9e'] }]
-                });
+                if (!isConnected) {
+                    // Request Bluetooth device
+                    const device = await navigator.bluetooth.requestDevice({
+                        filters: [{ services: ['6e400001-b5a3-f393-e0a9-e50e24dcca9e'] }]
+                    });
 
-                // Connect to the selected device
-                const server = await device.gatt.connect();
+                    // Connect to the selected device
+                    const server = await device.gatt.connect();
 
-                // Get UART service
-                const service = await server.getPrimaryService('6e400001-b5a3-f393-e0a9-e50e24dcca9e');
+                    // Get UART service
+                    const service = await server.getPrimaryService('6e400001-b5a3-f393-e0a9-e50e24dcca9e');
 
-                // Get UART characteristic
-                characteristic = await service.getCharacteristic('6e400003-b5a3-f393-e0a9-e50e24dcca9e');
+                    // Get UART characteristic
+                    characteristic = await service.getCharacteristic('6e400003-b5a3-f393-e0a9-e50e24dcca9e');
 
-                // Start notifications for the characteristic
-                await characteristic.startNotifications();
+                    // Start notifications for the characteristic
+                    await characteristic.startNotifications();
 
-                // Listen for characteristic value changes
-                characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
+                    // Listen for characteristic value changes
+                    characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
 
-                //alert('Connected to UART device.');
+                    document.getElementById('connectButton').textContent = 'Disconnect Avatar';
+                    isConnected = true;
+                } else {
+                    // Disconnect from the device
+                    await characteristic.stopNotifications();
+                    await characteristic.getDescriptor('client characteristic configuration').then(descriptor => {
+                        return descriptor.writeValue(new Uint8Array([0x00, 0x00]));
+                    });
+                    await characteristic.stopNotifications();
+                    isConnected = false;
+                    document.getElementById('connectButton').textContent = 'Connect to Avatar';
+                }
             } catch (error) {
                 console.error('Error: ' + error);
             }
@@ -90,45 +103,45 @@
         }
 
         function draw() {
-    background(255);
+            background(255);
 
-    let lineHeight = height / numPotentiometers;
-    let labelSize = min(width, height) * 0.03; // Responsive font size for labels
+            let lineHeight = height / numPotentiometers;
+            let labelSize = min(width, height) * 0.03; // Responsive font size for labels
 
-    for (let i = 0; i < numPotentiometers; i++) {
-        let lineY = i * lineHeight + lineHeight / 2;
+            for (let i = 0; i < numPotentiometers; i++) {
+                let lineY = i * lineHeight + lineHeight / 2;
 
-        // Draw the background rectangle
-        noStroke();
-        fill(backgroundColors[i]);
-        rect(0, i * lineHeight, width, lineHeight);
+                // Draw the background rectangle
+                noStroke();
+                fill(backgroundColors[i]);
+                rect(0, i * lineHeight, width, lineHeight);
 
-        // Draw the line with different color for each
-        strokeWeight(50);
-        stroke(lineColors[i]);
-        line(0, lineY, map(potValues[i], 0, 4095, 0, width * 0.55), lineY);
-        
-        
-        // Display the corresponding value to the left of the line
-        noStroke();
-        fill(255);
-        textAlign(RIGHT, CENTER);
-        textSize(labelSize);
-        text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width * 0.55) - 10, lineY);
-    }
+                // Draw the line with different color for each
+                strokeWeight(50);
+                stroke(lineColors[i]);
+                line(0, lineY, map(potValues[i], 0, 4095, 0, width * 0.55), lineY);
 
-    // Draw vertical labels on the right side
-    textAlign(RIGHT, CENTER);
-    let labelFontSize = min(width, height) * 0.03; // Responsive font size for labels
-    textSize(labelFontSize);
-    fill(255); // Set text color to white
-    for (let i = 0; i < numPotentiometers; i++) {
-        text(labels[i], width * 0.9, i * lineHeight + lineHeight / 2);
-    }
+                // Display the corresponding value to the left of the line
+                noStroke();
+                fill(255);
+                textAlign(RIGHT, CENTER);
+                textSize(labelSize);
+                text(int(potValues[i]), map(potValues[i], 0, 4095, 0, width * 0.55) - 10, lineY);
+            }
 
-    // Detect movement and display corresponding text
-    // checkMovement();
-}
+            // Draw vertical labels on the right side
+            textAlign(RIGHT, CENTER);
+            let labelFontSize = min(width, height) * 0.03; // Responsive font size for labels
+            textSize(labelFontSize);
+            fill(255); // Set text color to white
+            for (let i = 0; i < numPotentiometers; i++) {
+                text(labels[i], width * 0.9, i * lineHeight + lineHeight / 2);
+            }
+
+            // Detect movement and display corresponding text
+            // checkMovement();
+        }
+
         // Function to receive data from JavaScript
         function receiveData(data) {
             let values = data.split(',');
