--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avatar BT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <style>
         canvas {
             width: 90vw;
-            height: 90vh;
+            height: 50vh; /* Adjusted height for better visibility */
         }
     </style>
 </head>
 <body>
-    <h1>Avatar Debug</h1>
+    <h1>Avatar BT Debug</h1>
     <button id="connectButton">Connect to Avatar</button>
+    <button onclick="findClosestShop()">Find Closest Shop</button>
+    <div id="closestShop"></div>
 
     <script>
         let characteristic;
@@ -81,8 +84,55 @@
                 console.error('Processing sketch not initialized.');
             }
         }
+
+        function findClosestShop() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var latitude = position.coords.latitude;
+                    var longitude = position.coords.longitude;
+                    var apiURL = "https://overpass-api.de/api/interpreter?data=[out:json];node[shop](around:2," + latitude + "," + longitude + ");out;";
+
+                    $.ajax({
+                        url: apiURL,
+                        type: "GET",
+                        success: function(data) {
+                            if (data.elements.length > 0) {
+                                var closestShop = data.elements[0].tags.name;
+                                var shopLocation = [data.elements[0].lat, data.elements[0].lon];
+                                var distance = calculateDistance(latitude, longitude, shopLocation[0], shopLocation[1]);
+
+                                document.getElementById("closestShop").innerHTML = "Closest Shop: " + closestShop + "<br>Distance: " + distance.toFixed(2) + " meters";
+                            } else {
+                                document.getElementById("closestShop").innerHTML = "No shops found within 2 meters.";
+                            }
+                        },
+                        error: function() {
+                            document.getElementById("closestShop").innerHTML = "Error finding closest shop.";
+                        }
+                    });
+                });
+            } else {
+                document.getElementById("closestShop").innerHTML = "Geolocation is not supported by this browser.";
+            }
+        }
+
+        function calculateDistance(lat1, lon1, lat2, lon2) {
+            var R = 6371e3; // metres
+            var φ1 = lat1 * Math.PI / 180; // φ, λ in radians
+            var φ2 = lat2 * Math.PI / 180;
+            var Δφ = (lat2-lat1) * Math.PI / 180;
+            var Δλ = (lon2-lon1) * Math.PI / 180;
+
+            var a = Math.sin(Δφ/2) * Math.sin(Δφ/2) +
+                    Math.cos(φ1) * Math.cos(φ2) *
+                    Math.sin(Δλ/2) * Math.sin(Δλ/2);
+            var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+
+            var d = R * c; // in metres
+            return d;
+        }
     </script>
-    <p></p>
+
     <script type="text/javascript">
         // Processing 4 sketch
         let numPotentiometers = 8;
