--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
                 } else {
                     // Disconnect from the device
                     await characteristic.stopNotifications();
-                    await characteristic.getDescriptor('client characteristic configuration').then(descriptor => {
-                        return descriptor.writeValue(new Uint8Array([0x00, 0x00]));
-                    });
-                    await characteristic.stopNotifications();
+                    await device.gatt.disconnect();
                     isConnected = false;
                     document.getElementById('connectButton').textContent = 'Connect to Avatar';
                 }
