--- a/index.html
+++ b/index.html
@@ -22,12 +22,13 @@
     <script>
         let characteristic;
         let isConnected = false; // Track connection state
+        let device; // Declare device variable
 
         async function connectToDevice() {
             try {
                 if (!isConnected) {
                     // Request Bluetooth device
-                    const device = await navigator.bluetooth.requestDevice({
+                    device = await navigator.bluetooth.requestDevice({
                         filters: [{ services: ['6e400001-b5a3-f393-e0a9-e50e24dcca9e'] }]
                     });
 
@@ -46,6 +47,7 @@
                     // Listen for characteristic value changes
                     characteristic.addEventListener('characteristicvaluechanged', handleCharacteristicValueChanged);
 
+                    // Update UI
                     document.getElementById('connectButton').textContent = 'Disconnect Avatar';
                     isConnected = true;
                 } else {
@@ -56,7 +58,7 @@
                     document.getElementById('connectButton').textContent = 'Connect to Avatar';
                 }
             } catch (error) {
-                console.error('Error: ' + error);
+                console.error('Error connecting/disconnecting: ' + error);
             }
         }
 
@@ -83,36 +85,36 @@
         }
 
         function findClosestShop() {
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position) {
-            var latitude = position.coords.latitude;
-            var longitude = position.coords.longitude;
-            var radius = 5; // Change this value to adjust the radius
-            var apiURL = "https://overpass-api.de/api/interpreter?data=[out:json];node[shop](around:" + radius + "," + latitude + "," + longitude + ");out;";
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var latitude = position.coords.latitude;
+                    var longitude = position.coords.longitude;
+                    var radius = 5; // Change this value to adjust the radius
+                    var apiURL = "https://overpass-api.de/api/interpreter?data=[out:json];node[shop](around:" + radius + "," + latitude + "," + longitude + ");out;";
 
-            $.ajax({
-                url: apiURL,
-                type: "GET",
-                success: function(data) {
-                    if (data.elements.length > 0) {
-                        var closestShop = data.elements[0].tags.name;
-                        var shopLocation = [data.elements[0].lat, data.elements[0].lon];
-                        var distance = calculateDistance(latitude, longitude, shopLocation[0], shopLocation[1]);
+                    $.ajax({
+                        url: apiURL,
+                        type: "GET",
+                        success: function(data) {
+                            if (data.elements.length > 0) {
+                                var closestShop = data.elements[0].tags.name;
+                                var shopLocation = [data.elements[0].lat, data.elements[0].lon];
+                                var distance = calculateDistance(latitude, longitude, shopLocation[0], shopLocation[1]);
 
-                        document.getElementById("closestShop").innerHTML = "Closest Shop: " + closestShop + "<br>Distance: " + distance.toFixed(2) + " meters";
-                    } else {
-                        document.getElementById("closestShop").innerHTML = "No shops found within " + radius + " meters.";
-                    }
-                },
-                error: function() {
-                    document.getElementById("closestShop").innerHTML = "Error finding closest shop.";
-                }
-            });
-        });
-    } else {
-        document.getElementById("closestShop").innerHTML = "Geolocation is not supported by this browser.";
-    }
-}
+                                document.getElementById("closestShop").innerHTML = "Closest Shop: " + closestShop + "<br>Distance: " + distance.toFixed(2) + " meters";
+                            } else {
+                                document.getElementById("closestShop").innerHTML = "No shops found within " + radius + " meters.";
+                            }
+                        },
+                        error: function() {
+                            document.getElementById("closestShop").innerHTML = "Error finding closest shop.";
+                        }
+                    });
+                });
+            } else {
+                document.getElementById("closestShop").innerHTML = "Geolocation is not supported by this browser.";
+            }
+        }
 
         function calculateDistance(lat1, lon1, lat2, lon2) {
             var R = 6371e3; // metres
