--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             isConnected = false;
             document.getElementById('connectButton').textContent = 'Connect to Avatar';
             // Set all potValues to 0
-            potValues.fill(0);
+            potValues = [0, 0, 0, 0, 0, 0, 0, 0];
         }
     } catch (error) {
         console.error('Error connecting/disconnecting: ' + error);
