--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         let isMovingDown = false;
 
         function setup() {
-            createCanvas(windowWidth, windowHeight * 0.8);
+            createCanvas(windowWidth * 0.95, windowHeight * 0.8);
             potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
             lineColors = new Array(numPotentiometers);
             backgroundColors = new Array(numPotentiometers);
