--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
             width: 90vw;
             height: 50vh; /* Adjusted height for better visibility */
         }
+
+                /* Button styles */
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
+        /* Disconnect button style */
+        #connectButton {
+            background-color: #f44336; /* Red */
+        }
+
+        /* Find Closest Shop button style */
+        #findClosestShopButton {
+            background-color: #008CBA; /* Blue */
+        }
+        
     </style>
 </head>
 <body>
