--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Connect Button -->
     <button id="connectButton" class="button">Connect to Avatar</button>
     <!-- Find Closest Shop Button -->
-    <button id="findClosestShopButton" class="button">Find Closest Shop</button>
+    <button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>    
     <!-- Div to display closest shop -->
     <div id="closestShop"></div>
     <script>
