--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
         /* Disconnect button style */
         #connectButton {
-            background-color: #f44336; /* Red */
+            background-color: #0082FC; /* Red */
         }
 
         /* Find Closest Shop button style */
         #findClosestShopButton {
-            background-color: #008CBA; /* Blue */
+            background-color: #6EB183; /* Blue */
         }
         
     </style>
