--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             margin: 4px 2px;
             cursor: pointer;
             border-radius: 8px;
+            font-family: 'Roboto', sans-serif;
         }
 
         /* Disconnect button style */
