--- a/index.html
+++ b/index.html
@@ -304,5 +304,7 @@
             backgroundColors[7] = color(0, 0, 0, 100);    // 60% black
         }
     </script>
+        <!-- Div to display closest shop -->
+    <div id="closestShop"></div>
 </body>
 </html>
