--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Find Closest Shop Button -->
     <button id="findClosestShopButton" class="button" onclick="findClosestShop()">Find Closest Shop</button>    
     <!-- Div to display closest shop -->
-    <div id="closestShop"></div>
+    <!-- <div id="closestShop"></div>-->
     <script>
         let characteristic;
         let isConnected = false; // Track connection state
