--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="closestShop"></div>-->
 
         <!-- Container for Processing canvas and text -->
-    <div id="canvas-container">
+    <div id="canvas-container"></div>
         <!-- Processing sketch canvas -->
         <script type="text/javascript">
         // Processing 4 sketch
@@ -192,7 +192,6 @@
             backgroundColors[7] = color(0, 0, 0, 100);    // 60% black
         }
     </script>
-        </div>
         <!-- Div to display closest shop -->
         <div id="closestShop"></div>
     <script>
