--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         function setup() {
             var avatarBTCanvas = createCanvas(windowWidth * 0.95, windowHeight * 0.6);
-            avatarBTCanvas.parent("avaterBTdiv");
+            avatarBTCanvas.parent("avatarBTdiv");
             potValues = [0, 0, 0, 0, 0, 0, 0, 0]; // Initialize potValues array with default values
             lineColors = new Array(numPotentiometers);
             backgroundColors = new Array(numPotentiometers);
