--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                 document.getElementById("currentLocation").innerHTML = "Geolocation is not supported by this browser.";
             }
         }
+
+        // Call getCurrentLocation function when the page loads
+        window.onload = getCurrentLocation;
         
         async function findClosestShop() {
     if (navigator.geolocation) {
